<resources>
    <string name="app_name">Staffs Haven</string>
    <string name="dashboard">Dashboard</string>
    <string name="goals">Goals</string>
    <string name="healthy_habits">Health</string>
    <string name="relaxation">Relaxation</string>
    <string name="label_dashboard">Dashboard</string>
    <string name="label_goals">Goals</string>
    <string name="label_health">Health</string>
    <string name="label_relaxation">Relaxation</string>
    <string name="txt_relaxation">Relaxation</string>
    <string name="title">title</string>
    <string name="FAB_journaling">Journaling</string>
    <string name="fact1">fact1</string>
    <string name="fact2">fact2</string>
    <string name="fact3">fact3</string>
    <string name="fact4">fact4</string>
    <string name="fact5">fact5</string>
    <string name="fact6">fact6</string>
    <string name="fact7">fact7</string>
    <string name="fact8">fact8</string>
    <string name="fact9">fact9</string>
    <string name="fact10">fact10</string>
    <string name="fact11">fact11</string>
    <string name="fact12">fact12</string>
    <string name="fact13">fact13</string>
    <string name="notification_channel_name">Reminder Notifications</string>
    <string name="notification_channel_description">Reminder Notifications description</string>
    <string name="notification_title">Reminder</string>
    <string name="notification_content">Go meditate for 15minutes, it will highlight your day!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="passwordLogin">Password</string>
    <string name="registerTxt">Register</string>
    <string name="click_to_login">Click to Login</string>
    <string name="click_to_register">Click to Register</string>
    <string name="log_out">Log Out</string>
    <string name="personal_details">Personal Details</string>
    <string name="emailTxt">Email:</string>
    <string name="NHS_mentalHealthTxt">Emergency call to the NHS Mental Health Access Team</string>
    <string name="available_24_7">Available 24/7</string>
    <string name="TogetherAllTxt">TogetherAll, free mental health support and online community</string>
    <string name="StaffsWellBeingTxt">Book an appointment with Staff\'s Student Wellbeing Team</string>
    <string name="your_profile">Your profile</string>
    <string name="go_back">Go back</string>
    <string name="btnStudyYes">Yes</string>
    <string name="btnStudyNo">No</string>
    <string name="StudyTxt">Did you study?</string>
    <string name="nbMealsTxt">How many times did you eat today?</string>
    <string name="PositivesTxt">What are 3 positive things that you remember from today?</string>
    <string name="yogaClassTxt">Sign up for a yoga class</string>
    <string name="meditationReminderTxt">Set a reminder to meditate today</string>
    <string name="appointmentReminderTxt">Enroll for a student wellbeing appointment</string>
    <string name="username">Username</string>
    <string name="profile_button">profile button</string>
    <string name="showEat">Show us what you ate today!</string>
    <string name="lunch">Lunch</string>
    <string name="diner">Diner</string>
    <string name="sport">Sport</string>
    <string name="food">Food</string>
    <string name="findFoodTxt">Where to find food on campus?</string>
    <string name="title_activity_circle_composable">CircleComposable</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="channel_name">Reminder notifications</string>
    <string name="channel_description">Receive an occasionnal notification reminding the user to do something such as meditation.</string>
    <string name="hanleyPark5K">Sign up for a 5km walk or run in Hanley Park this Saturday</string>
    <string name="submit">Submit</string>
    <string name="registration">Registration</string>
    <string name="questionnaire">Questionnaire</string>
    <string name="one">1/6</string>
    <string name="two">2/6</string>
    <string name="three">3/6</string>
    <string name="four">4/6</string>
    <string name="five">5/6</string>
    <string name="six">6/6</string>
    <string name="color_preferences">Color preferences:</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="pink">Pink</string>
    <string name="orange">Orange</string>
    <string name="grey">Grey</string>
    <string name="pastels">Pastels (with dark accents)</string>
    <string name="bright">Bright (with pastel accents)</string>
    <string name="dark">Dark (with pastel accents)</string>
    <string name="navigation">Navigation</string>
    <string name="text">Text</string>
    <string name="images_icons">Images &amp; Icons</string>
    <string name="sleep">Sleep</string>
    <string name="swipe_up_down">Swipe up &amp; down</string>
    <string name="click">Click</string>
    <string name="slide_left_right"><![CDATA[Slide left & right]]></string>
</resources>