<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="15dp"
    tools:context=".Registration">

    <TextView
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/registerTxt"
        android:fontFamily="@font/raleway_light"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="45sp"
        android:textStyle="bold" />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailLogin"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway_light"
            android:textStyle="bold"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordLogin"
            android:hint="@string/passwordLogin"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway_light"
            android:textStyle="bold"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:backgroundTint="?attr/colorAccent"
        android:fontFamily="@font/raleway_light"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:textSize="18dp"
        android:text="@string/registerTxt"/>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:indeterminate="true"
        android:indeterminateTint="?attr/colorAccent"/>
    <TextView
        android:id="@+id/loginNow"
        android:text="@string/click_to_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:textColor="?attr/colorOnPrimary"
        android:fontFamily="@font/raleway_light"
        />

</LinearLayout>