<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="15dp"
    tools:context=".Login"
    android:background="?attr/android:colorBackground">

    <TextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/raleway_light"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="45sp"
        android:textStyle="bold" />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailLogin"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway_light"
            android:textStyle="bold"/>

    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="330dp"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_light"
                android:hint="@string/passwordLogin"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>
        <ImageButton
            android:id="@+id/showHideBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/visibility"
            android:backgroundTint="@color/transparent"
            app:tint="?attr/colorOnPrimary" />
    </LinearLayout>
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:textSize="20dp"
        android:fontFamily="@font/raleway_light"
        android:textStyle="bold"
        android:text="@string/login"
        android:backgroundTint="?attr/colorAccent"/>
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/checkAnimationView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:lottie_rawRes="@raw/check"
        android:visibility="gone"
        android:indeterminate="true"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"/>

    <TextView
        android:id="@+id/registerNow"
        android:text="@string/click_to_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway_light"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="?attr/colorOnPrimary"
        android:layout_marginTop="20dp"/>

</LinearLayout>